--- a/404.html
+++ b/404.html
@@ -223,7 +223,7 @@
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <a class="navbar-brand" href="yupstao.github.io/yupstao.github.io/">
         <span>Typology</span>
-        <span>Yupstao</span>
+        <span>Yuan</span>
         
       </a>
       <button
